some reworks after feedback

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                         </div>
                         <h3 class="features_subtitle">Strategy</h3>
                         <p class="features_descr">Our goal is to identify the business problem to walk away with the perfect and creative
-                            solution. </p>
+                            solution. 
+                        </p>
                     </li>
                     <li class="features_item">
                         <div class="features_item_icon">
@@ -67,8 +68,8 @@
                             </svg>
                         </div>
                         <h3 class="features_subtitle">Punctuality</h3>
-                        <p class="features_descr">Bring the key message to the brand's audience for the best price within the shortest
-                            possible time.</p>
+                        <p class="features_descr">Bring the key message to the brand's audience for the best price within the shortestpossible time.
+                        </p>
                     </li>
                     <li class="features_item">
                         <div class="features_item_icon">
@@ -78,7 +79,8 @@
                         </div>
                         <h3 class="features_subtitle">Diligence</h3>
                         <p class="features_descr">Research and confirm brands that present the strongest digital growth opportunities and
-                            minimize risk.</p>
+                            minimize risk.
+                        </p>
                     </li>
                     <li class="features_item">
                         <div class="features_item_icon">
@@ -88,10 +90,11 @@
                         </div>
                         <h3 class="features_subtitle">Technologies</h3>
                         <p class="features_descr">Design practice focused on digital experiences. We bring forth a deep passion for
-                            problem-solving.</p>
+                            problem-solving.
+                        </p>
                     </li>
                 </ul>
-            </div >
+            </div>
         </section>
         <section class="services">
             <div class="container">
@@ -271,7 +274,7 @@
                         </div>
                     </li>
                 </ul>
-            </div >
+            </div>
         </section>
         <section class="customers">
             <div class="container">
