--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Studio</title>
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header_container">
             <nav class="header_navigation">
                 <a href="#" class="header_logo">
@@ -32,20 +32,25 @@
                 </ul>
             </nav>
             <address class="address">
-                <ul class="header_list">
-                    <li><a href="mailto:info@devstudio.com" class="address_links">info@devstudio.com</a></li>
-                    <li><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
+                <ul class="address_list">
+                    <li class="address_item"><a href="mailto:info@devstudio.com" class="address_links">info@devstudio.com</a></li>
+                    <li class="address_item"><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
+            <button class="burger_button js-open-menu" type="button" aria-expanded="true">
+                <svg class="burger_icon" width="32" height="22">
+                  <use href="./images/symbol-defs.svg#icon-hamburger"></use>
+                </svg>
+            </button>
         </div>
-    </header> -->
+    </header>
     <main>
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="container">
                 <h1 class="hero_title">Effective Solutions for Your Business</h1>
                 <button type="button" class="order_button button" data-modal-open>Order Service</button>
             </div>
-        </section> -->
+        </section>
         <section class="features">
             <div class="features_container container">
                 <h2 class="visually_hidden">features</h2>
@@ -96,7 +101,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="services">
+        <section class="services">
             <div class="container">
                 <h2 class="title">What Are We Doing</h2>
                 <ul class="services_list">
@@ -111,7 +116,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <section class="team">
             <div class="container">
                 <h2 class="title">Our Team</h2>
@@ -326,7 +331,7 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer_section">
+    <footer class="footer_section">
         <div class="container footer_flex_container">
             <div class="footer_logo_container">
                 <a href="#" class="header_logo">
@@ -463,7 +468,7 @@
                 <button type="submit" class="modal_form_submit">Send</button>
             </form>
         </div>
-    </div> -->
+    </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
