footer mobile done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Studio</title>
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header_container">
             <nav class="header_navigation">
                 <a href="#" class="header_logo">
@@ -45,12 +45,12 @@
         </div>
     </header>
     <main>
-        <section class="hero">
+         <section class="hero">
             <div class="container">
                 <h1 class="hero_title">Effective Solutions for Your Business</h1>
                 <button type="button" class="order_button button" data-modal-open>Order Service</button>
             </div>
-        </section>
+        </section> -->
         <section class="features">
             <div class="features_container container">
                 <h2 class="visually_hidden">features</h2>
@@ -101,7 +101,7 @@
                 </ul>
             </div>
         </section>
-        <section class="services">
+        <!-- <section class="services">
             <div class="container">
                 <h2 class="title">What Are We Doing</h2>
                 <ul class="services_list">
@@ -116,7 +116,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <section class="team">
             <div class="container">
                 <h2 class="title">Our Team</h2>
@@ -382,8 +382,8 @@
                     class="email"
                     />
                     <button type="submit" class="subscribe_button button">
-                        <span class="subscribe_span">Subscribe</span>
-                        <svg width="24" height="24">
+                        Subscribe
+                        <svg width="24" height="24" class="svg">
                             <use href="./images/symbol-defs.svg#icon-send-footer"></use>
                         </svg>
                     </button>
