--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="./css/desktop.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -293,7 +297,7 @@
                 </ul>
             </div>
             <div class="subscribe">
-                <p class="footer_p">Subscribe</p>
+                <p class="footer_subscribe">Subscribe</p>
                 <form class="subscribe_form">
                     <input
                     type="email"
@@ -302,8 +306,8 @@
                     class="email"
                     />
                     <button type="submit" class="subscribe_button button">
-                        <span class="subscribe_span">Subscribe</span>
-                        <svg width="24" height="20">
+                        Subscribe
+                        <svg width="24" height="20" class="svg">
                             <use href="./images/symbol-defs.svg#icon-send-footer"></use>
                         </svg>
                     </button>
