--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@
     </main>
     <footer class="footer_section">
         <div class="container footer_flex_container">
-            <div class="footer_logo_container">
+            <div class="footer_logo_container footer_item">
                 <a href="#" class="header_logo">
                     <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
                     </a>
                     <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div >
-            <div class="social_media">
+            <div class="social_media footer_item">
                 <p class="social_media_text">Social media</p>
                 <ul class="social_media_list">
                     <li class="social_media_item">
@@ -372,7 +372,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="subscribe">
+            <div class="subscribe footer_item">
                 <p class="footer_subscribe">Subscribe</p>
                 <form class="subscribe_form">
                     <input
