--- a/index.html
+++ b/index.html
@@ -333,45 +333,47 @@
     </main>
     <footer class="footer_section">
         <div class="container footer_flex_container">
-            <div class="footer_logo_container footer_item">
-                <a href="#" class="header_logo">
-                    <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
-                    </a>
-                    <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <div class="footer_tablet_container">
+                <div class="footer_logo_container footer_item">
+                    <a href="#" class="header_logo footer_logo">
+                        <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
+                        </a>
+                        <p class="footer_description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                </div >
+                <div class="social_media footer_item">
+                    <p class="social_media_text">Social media</p>
+                    <ul class="social_media_list">
+                        <li class="social_media_item">
+                            <a href="" class="social_media_link">
+                                <svg width="24" height="24">
+                                    <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social_media_item">
+                            <a href="" class="social_media_link">
+                                <svg width="24" height="24">
+                                    <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social_media_item">
+                            <a href="" class="social_media_link">
+                                <svg width="24" height="24">
+                                    <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social_media_item">
+                            <a href="" class="social_media_link">
+                                <svg width="24" height="24">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div >
-            <div class="social_media footer_item">
-                <p class="social_media_text">Social media</p>
-                <ul class="social_media_list">
-                    <li class="social_media_item">
-                        <a href="" class="social_media_link">
-                            <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-instagram_footer"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social_media_item">
-                        <a href="" class="social_media_link">
-                            <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-twitter_footer"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social_media_item">
-                        <a href="" class="social_media_link">
-                            <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-facebook_footer"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social_media_item">
-                        <a href="" class="social_media_link">
-                            <svg width="24" height="24">
-                                <use href="./images/symbol-defs.svg#icon-linkedin_footer"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
             <div class="subscribe footer_item">
                 <p class="footer_subscribe">Subscribe</p>
                 <form class="subscribe_form">
