--- a/index.html
+++ b/index.html
@@ -13,44 +13,46 @@
     <title>Studio</title>
 </head>
 <body>
-    <!-- <header class="header">
-        <div class="container header_container">
-            <nav class="header_navigation">
-                <a href="#" class="header_logo">
-                    <span class="web logo_link">WEB</span><span class="studio">STUDIO</span>
-                </a>
-                <ul class="header_list">
-                    <li class="header_item">
-                        <a href="./index.html" class="header_links active">Studio</a>
-                    </li>
-                    <li class="header_item">
-                        <a href="./portfolio.html" class="header_links">Portfolio</a>
-                    </li>
-                    <li class="header_item">
-                        <a href="#" class="header_links">Contacts</a>
-                    </li>
-                </ul>
-            </nav>
-            <address class="address">
-                <ul class="address_list">
-                    <li class="address_item"><a href="mailto:info@devstudio.com" class="address_links">info@devstudio.com</a></li>
-                    <li class="address_item"><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
-            <button class="burger_button js-open-menu" type="button" aria-expanded="true">
-                <svg class="burger_icon" width="32" height="22">
-                  <use href="./images/symbol-defs.svg#icon-hamburger"></use>
-                </svg>
-            </button>
+    <header class="header">
+        <div class="container">
+            <div class="header_container">
+                <nav class="header_navigation">
+                    <a href="#" class="header_logo">
+                        <span class="web logo_link">WEB</span><span class="studio">STUDIO</span>
+                    </a>
+                    <ul class="header_list">
+                        <li class="header_item">
+                            <a href="./index.html" class="header_links active">Studio</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="./portfolio.html" class="header_links">Portfolio</a>
+                        </li>
+                        <li class="header_item">
+                            <a href="#" class="header_links">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
+                <address class="address">
+                    <ul class="address_list">
+                        <li class="address_item"><a href="mailto:info@devstudio.com" class="address_links">info@devstudio.com</a></li>
+                        <li class="address_item"><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
+                    </ul>
+                </address>
+                <button class="burger_button js-open-menu" type="button" aria-expanded="true">
+                    <svg class="burger_icon" width="32" height="22">
+                      <use href="./images/symbol-defs.svg#icon-hamburger"></use>
+                    </svg>
+                </button>
+            </div>
         </div>
     </header>
     <main>
-         <section class="hero">
-            <div class="container">
+         <!-- <section class="hero">
+            <div class="container sub_container">
                 <h1 class="hero_title">Effective Solutions for Your Business</h1>
                 <button type="button" class="order_button button" data-modal-open>Order Service</button>
             </div>
-        </section> -->
+        </section>
         <section class="features">
             <div class="features_container container">
                 <h2 class="visually_hidden">features</h2>
@@ -101,7 +103,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="services">
+        <section class="services">
             <div class="container">
                 <h2 class="title">What Are We Doing</h2>
                 <ul class="services_list">
@@ -282,7 +284,7 @@
             </div>
         </section>
         <section class="customers">
-            <div class="container">
+            <div class="container sub_container">
                 <h2 class="customers_title">Customers</h2>
                 <ul class="customers_list">
                     <li class="customers_item">
