fixed modal size

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </header>
     <main>
-         <!-- <section class="hero">
+         <section class="hero">
             <div class="container sub_container">
                 <h1 class="hero_title">Effective Solutions for Your Business</h1>
                 <button type="button" class="order_button button" data-modal-open>Order Service</button>
@@ -103,7 +103,7 @@
                 </ul>
             </div>
         </section>
-        <section class="services">
+        <!-- <section class="services">
             <div class="container">
                 <h2 class="title">What Are We Doing</h2>
                 <ul class="services_list">
