lets go to create mobile menu

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         <li class="address_item"><a href="tel:+110001111111" class="address_links">+11 (000) 111-11-11</a></li>
                     </ul>
                 </address>
-                <button class="burger_button js-open-menu" type="button" aria-expanded="true">
-                    <svg class="burger_icon" width="32" height="22">
-                      <use href="./images/symbol-defs.svg#icon-hamburger"></use>
+                <button type="button" class="menu-open">
+                    <svg class="menu-open_btn">
+                        <use></use>
                     </svg>
                 </button>
             </div>
