--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         </section>
     </main>
     <footer class="footer_section">
-        <div class="container footer_flex_container">
+        <div class="container sub_container">
             <div class="footer_tablet_container">
                 <div class="footer_logo_container footer_item">
                     <a href="#" class="header_logo footer_logo">
