--- a/portfolio.html
+++ b/portfolio.html
@@ -320,7 +320,7 @@
         </section>
     </main>
     <footer class="footer_section">
-        <div class="container footer_flex_container">
+        <div class="container sub_container">
             <div class="footer_logo_container">
                 <a href="#" class="header_logo">
                     <span class="web">WEB</span><span class="studio_footer">STUDIO</span>
