minor fixes for services

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                         src="./images/services/img1.jpg" alt="computer" width="360" height="300">
                     </li>
                     <li class="services_item">
-                        <img srcset="./images/services/img2@2x.jpg 2x"
-                        src="./images/services/img2.jpg" alt="phone" width="360" height="300">
+                        <img srcset="./images/services/phone@2x.jpg 2x"
+                        src="./images/services/phone.jpg" alt="phone" width="360" height="300">
                     </li>
                     <li class="services_item">
                         <img srcset="./images/services/img3@3x.jpg 2x"
