--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
                         </ul>
                     </nav>
                 </div>
-                <div>
+                <div class="menu_midle_content">
                     <a href="tel:+110001111111" class="mob_menu_tel">+11 (000) 111-11-11</a>
                     <a href="mailto:info@devstudio.com" class="mob_menu_email">info@devstudio.com</a>
+                </div>
+                <div>
                     <ul class="mob_social_list">
                         <li class="mob_social_item">
                             <a href="" class="mob_social_link">
