--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
     </header>
     <main>
         <section class="portfolio">
-            <div class="container">
+            <div class="container photo_container">
                 <h1 class="visually_hidden">Portfolio</h1>
                 <ul class="btn_list">
                     <li class="btn_item">
